base/production/go-example/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-example
spec:
  selector:
    app: go-example
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
